refactored passport with async await. Next: jwt

--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -2,15 +2,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Register</title>
 </head>
 <body>
-    <h1>Login</h1>
+    <h1>Sign Up</h1>
 
-    <form action="/auth/login" method="post">
+    <form action="/auth/signup" method="post">
         <input type="text" name="email">
         <input type="text" name="password">
-        <input type="submit" value="login">
+        <input type="submit" value="signup">
     </form>
 </body>
 </html>
