--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,10 +1,11 @@
 <html>
   <head>
-    <title> ToDo App </title>
+    <title> Welcome</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:100"     rel="stylesheet">
     <link href="/style.css" rel="stylesheet">
   </head>
 <body>
+  <h1> Welcome to test</h1>
   <div class="container">
      
 </div>
