--- a/src/templates/views/login.hbs
+++ b/src/templates/views/login.hbs
@@ -7,7 +7,7 @@
 <body>
     <h1>Login</h1>
 
-    <form action="/auth/login" method="post">
+    <form action="/login" method="post">
         <input type="text" name="email">
         <input type="text" name="password">
         <input type="submit" value="login">
