--- a/src/templates/views/login.hbs
+++ b/src/templates/views/login.hbs
@@ -7,9 +7,11 @@
 <body>
     <h1>Login</h1>
 
-    <form action="/login" method="post">
-        <input type="text" name="email">
-        <input type="text" name="password">
+    <form action="/users/login" method="post">
+        <label for="email">Email : </label>
+        <input type="text" name="email"><br><br>
+        <label for="email">Password : </label>
+        <input type="text" name="password"><br><br>
         <input type="submit" value="login">
     </form>
 </body>
