--- a/src/templates/views/private-dashboard.hbs
+++ b/src/templates/views/private-dashboard.hbs
@@ -9,7 +9,7 @@
 <body>
     <h1> {{title}}</h1>
     <div class="container">
-        <!-- <button type="button" class="btn btn-primary">Submit</button> -->
+        <button type="button" name="logout" action="/users/logout" class="btn btn-primary">Submit</button>
     </div>
     <div class="container">
     {{!-- <form action="/articles" method="post">
