--- a/src/views/private-dashboard.ejs
+++ b/src/views/private-dashboard.ejs
@@ -34,7 +34,7 @@
   </div>
   <div class="form-group">
     <label class="col-form-label col-form-label-lg" for="inputLarge">Upload Image</label>
-    <input class="form-control form-control-lg" type="file" name="file" id='file'>
+    <input class="form-control form-control-lg" type="file" name="picture" id='picture'>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
   </form>
