FIX: Reset password routes

--- a/src/views/reset-success.ejs
+++ b/src/views/reset-success.ejs
@@ -15,8 +15,8 @@
   
   <div class="container-fluid" style="margin-top:80px">
     <h1>You have successfully reset your password. You can now login.</h1>
-    <form action='/users/login' method='GET'>
-        <button type="submit" class="btn btn-primary btn-block">Login</button>
+    <form>
+        <input type="button" value="Login" class="btn btn-primary btn-block" onclick="window.open('https://member.thepcvit.com/login')" />
     </form>
     
   </div>
