--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,12 +11,12 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Homepage</a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="/users/login">Login</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/users/signup">Signup</a>
-      </li>
+      </li> -->
     </ul>
   </nav>     
   <div class="container-fluid" style="margin-top:80px">
